# Instructoid

next-app/: package-lock.json  package.json
next-app/app/: page.tsx
next-app/app/auth/login/: page.tsx
next-app/app/auth/register/: page.tsx
next-app/app/profile/: page.tsx
next-app/components/: login-form.tsx  register-form.tsx  sign-out-button.tsx
next-app/lib/: auth-client.ts
next-app/prisma/: schema.prisma
py-backend/: main.py  pyproject.toml
